--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.1",
     "framer-motion": "^12.33.0",
+    "imagekit": "^6.0.0",
+    "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
