--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 VITE_FIREBASE_MEASUREMENT_ID=
 VITE_FIREBASE_VAPID_KEY=
+VITE_IMAGEKIT_PUBLIC_KEY=
+VITE_IMAGEKIT_URL_ENDPOINT=
+IMAGEKIT_PRIVATE_KEY=
